[package]
name = "dotenv_config_ext"
version = "0.1.3"
edition = "2021"
authors = [
  "Alejandro Llanes <sombra.libre@gmail.com>",
]
description = "parse `env` to config struct for Rust"
homepage = "https://github.com/sombralibre/dotenv-config"
repository = "https://github.com/sombralibre/dotenv-config"
documentation = "https://docs.rs/dotenv_config_ext"
keywords = ["environment", "env", "dotenv", "settings", "config"]
readme = "README.md"
license = "MIT"

[[examples]]
name = "config"

[lib]
proc-macro = true

[dependencies]
anyhow = "1"
dotenv = "0.15.0"
askama = "0.11.1"           # Type-safe, compiled Jinja-like templates for Rust
convert_case = "0.6.0"      # Convert a string to snake_case, kebab-case, or camelCase

[dev-dependencies]
tokio-test = "0.4.2"